[gd_scene load_steps=3 format=1]

[ext_resource path="res://DeathScreen/DeathScreen.gd" type="Script" id=1]
[ext_resource path="res://Inventory/Font/Lato-Black.fnt" type="BitmapFont" id=2]

[node name="DeathScreen" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/margin_right = 80
custom_constants/margin_top = 40
custom_constants/margin_left = 80
custom_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 80.0
margin/top = 40.0
margin/right = 944.0
margin/bottom = 560.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="DeathMessage" type="Label" parent="MarginContainer/Panel/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 864.0
margin/bottom = 158.0
custom_fonts/font = ExtResource( 2 )
text = "You died by by pidgeons."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ItemMessage" type="Label" parent="MarginContainer/Panel/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 162.0
margin/right = 864.0
margin/bottom = 195.0
custom_fonts/font = ExtResource( 2 )
text = "Items you collected in this run:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Items" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 199.0
margin/right = 864.0
margin/bottom = 357.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 361.0
margin/right = 864.0
margin/bottom = 520.0
use_top_left = false

[node name="ReturnButton" type="Button" parent="MarginContainer/Panel/VBoxContainer/CenterContainer"]

rect/min_size = Vector2( 400, 50 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 232.0
margin/top = 54.0
margin/right = 632.0
margin/bottom = 104.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Return to Title Screen"
flat = false

[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/CenterContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]


